Add first images by Carlos

--- a/_posts/2018-09-09-stop.md
+++ b/_posts/2018-09-09-stop.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "Road closed"
+title: "Rose"
 post_date: 2018-09-09 15:21:00
-main_image_path: /assets/images/road_closed.jpg
-main_image_caption: "Road closed"
+main_image_path: /assets/images/rose.jpg
+main_image_caption: "Rose"
 comments: true
 tags: clients
 images:
